--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,3 +18,8 @@ services:
       POSTGRES_DB: lis
     ports:
       - '5432:5432'
+    volumes:
+      - ./postgres-data:/var/lib/postgresql/data
+
+volumes:
+  postgres-data:
